# Diabetes-Obesity-Risk-Prediction

./: .gitignore  README.md  modelling (2).ipynb
backend/: .gitignore  Dockerfile  README.md  add_role_column.py  docker-compose.yml  makefile  pytest.ini  (+1 more)
model/diabobesity-prediction/: README.md  pyproject.toml
model/diabobesity-prediction/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
model/diabobesity-prediction/catboost_info/learn/: events.out.tfevents
model/diabobesity-prediction/conf/: logging.yml
model/diabobesity-prediction/conf/base/: catalog.yml  mlflow.yml  parameters.yml
model/diabobesity-prediction/data/01_raw/: cleaned_diabetes_test.csv  cleaned_diabetes_train.csv  diabetes_test.csv  diabetes_train.csv
model/diabobesity-prediction/data/02_intermediate/: diabetes_test_cleaned.parquet  diabetes_train_cleaned.parquet
model/diabobesity-prediction/data/03_primary/: X_test.parquet  X_train.parquet  X_val.parquet  y_test.parquet  y_train.parquet  y_val.parquet
model/diabobesity-prediction/data/04_feature/: best_model.pkl  best_val_metrics.json
model/diabobesity-prediction/data/06_models/: catboost_model.cbm  lime_background.pkl  scaler.pkl  trained_model.pkl
model/diabobesity-prediction/data/08_reporting/: data_processing.md  evaluation.md  evaluation_report.json  feature_engineering.md  feature_importance_path.txt  full_evaluation_report.json  lime_explanation_path.txt  model_metadata.json  predictions.md  roc_curves_path.txt  shap_bar_path.txt  shap_beeswarm_path.txt  training.md
model/diabobesity-prediction/docs/source/: conf.py  index.rst
model/diabobesity-prediction/notebooks/: modelling.ipynb
model/diabobesity-prediction/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
model/diabobesity-prediction/notebooks/catboost_info/learn/: events.out.tfevents
model/diabobesity-prediction/src/diabobesity_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
model/diabobesity-prediction/src/diabobesity_prediction/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
model/diabobesity-prediction/src/diabobesity_prediction/pipelines/evaluation/: __init__.py  nodes.py  pipeline.py
model/diabobesity-prediction/src/diabobesity_prediction/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
model/diabobesity-prediction/src/diabobesity_prediction/pipelines/prediction/: __init__.py  nodes.py  pipeline.py
model/diabobesity-prediction/src/diabobesity_prediction/pipelines/training/: __init__.py  nodes.py  pipeline.py
(+164 files in other folders)
