[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "diabobesity_prediction"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
    "kedro-viz>=12.3.0",
    "kedro-datasets>=1.0",
    "kedro-mlflow>=0.12.1",
    "mlflow>=2.18.0",
    "prefect>=3.1.14",
    "pandas>=2.2.3",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.3",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "joblib>=1.4.2",
    "shap>=0.45,<0.46",
    "numba>=0.59,<0.60",
    "lime>=0.2.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "imbalanced-learn>=0.12.4",
    "optuna>=4.1.0",
    "pyyaml>=6.0.2",
    "tqdm==4.67.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.31.0",
]

[project.scripts]
"diabobesity-prediction" = "diabobesity_prediction.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "diabobesity_prediction.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "diabobesity_prediction"
project_name = "DiabObesity-prediction"
kedro_init_version = "1.4.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/diabobesity_prediction -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "a93e9c34ab844d47bf6c44468002ddc8"
